Remove "no question marks in urls" experimental feature, helper methods, etc.